<resources>
    <string name="app_name">To Do</string>
    <string name="add_text">Add a To Do</string>
    <string name="enter_a_new_to_do_here">Enter a new To Do here...</string>
    <string name="add_new_to_do">Add new To Do</string>
</resources>